16/08/2024

Initiated Portfolio Project
	# Set Up Initial Page - About Page.
	# About page is our home page
	# Connected to S3 buckets for storing and using images
	# Certifications section is not complete. Need to connect to RDS for completion.
	# Entered gitignore.

17/08/2024

Modified About page in  Portfolio Project
	# Modified the front end of About page
	# made a bit more visually pleasing 


17/08/2024

Added Certification Section
	# In About page where certifications were left out, it is complete
	# certificate cover image and certificate is obtained via S3 buckets

Added Contact Us section

	# while pressing say hello, it takes us to contact me page
	# we can fill in the form and through email backend, mail is send with filled in details
	# tried to set env variables instead of putting details plainly
	# env variables did not work, need to try again. for tomorrow.


18/08/2024

Added Work Section
	# Added work page which display all the previous experiences
	# created a model for the previous experiences
	# created templatetags and custom_filters.py to find the modulus
	# all experiences will be placed in order reverse of the previous
	# all images are present in s3 buckets.


19/08/2024

Added Individual work section
	# Added new html template, views and urls which can open individual work page
	# Took out details from database and displayed in page.
	# Connected this page to company cover images such that on clicking it, will open the individual work page
	# Corrected image issues