@@ -95,7 +95,9 @@
 
 
         <div class="col-md-4 p-5 my-5 text-left">
-            <h3 class="khand-semibold " id="hover-section">{{experience.designation}}</h3>
+            <a href="{% url 'singlework' experience.id %}" style="text-decoration: none;">
+            <h3 class="khand-semibold text-dark" id="hover-section" >{{experience.designation}}</h3>
+            </a>
             <br>
             <p class="lead border rounded-pill font-weight-bold w-25 khand-medium text-center bg-info text-white">{{experience.start_year}}-{{experience.end_year}}</p>
 
@@ -134,8 +136,10 @@
 
         </div>
         <br><br>
-        <div class="d-flex justify-content-center">
-        <button class="btn btn-info border rounded-pill text-white text-center w-25 m-auto khand-medium font-weight-bold">View</button>
+        <div >
+            <a href="{% url 'singlework' experience.id %}" class="d-flex justify-content-center">
+                <button class="btn btn-info border rounded-pill text-white text-center w-25 m-auto khand-medium font-weight-bold">View</button>
+            </a>
         </div>
     </div>
     </div>
@@ -145,7 +149,9 @@
     <div class="row">
 
         <div class="col-md-4 p-5 my-5 text-left">
-            <h3 class="khand-semibold " id="hover-section">{{experience.designation}}</h3>
+            <a href="{% url 'singlework' experience.id %}" style="text-decoration: none;">
+            <h3 class="khand-semibold text-dark" id="hover-section">{{experience.designation}}</h3>
+            </a>
             <br>
             <p class="lead border rounded-pill font-weight-bold w-25 khand-medium text-center bg-info text-white">{{experience.start_year}}-{{experience.end_year}}</p>
 
@@ -184,8 +190,10 @@
 
             </div>
             <br><br>
-            <div class="d-flex justify-content-center">
-                <button class="btn btn-info border rounded-pill text-white text-center w-25 m-auto khand-medium font-weight-bold">View</button>
+            <div>
+                <a href="{% url 'singlework' experience.id %}" class="d-flex justify-content-center">
+                    <button class="btn btn-info border rounded-pill text-white text-center w-25 m-auto khand-medium font-weight-bold">View</button>
+                </a>
             </div>
         </div>
 
